Added Cloudinary CDN to website
- Changed image src to cloudinary
- Made .full-width-container less wide
- Fixed alt text and titles on "Photos" page

--- a/index.html
+++ b/index.html
@@ -41,8 +41,19 @@
     <main class="container">
       <section id="our-story">
         <div>
-          <img src="/img/homepag-meg.jpg" alt="Megan" loading="lazy" />
-          <img src="/img/homepage-ryan.jpg" alt="Ryan" loading="lazy" />
+          <!-- <img src="/img/homepag-meg.jpg" alt="Megan" loading="lazy" /> -->
+
+          <img
+            src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626733568/homepag-meg_l2wz5z.jpg"
+            alt="Megan"
+            loading="lazy"
+            class="cld-responsvie"
+          />
+          <img
+            src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734684/wedding-website/homepage-ryan_phsmay.jpg"
+            alt="Ryan"
+            loading="lazy"
+          />
         </div>
         <article>
           <h2>Our Story</h2>
@@ -82,7 +93,7 @@
             couldn’t ignore the signs in one another.
           </p>
           <img
-            src="/img/homepage-family.jpg"
+            src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734684/wedding-website/homepage-family_oz0qbx.jpg"
             alt="Megan and Ryan on a couch with their dogs, Maggie and Charlie"
             loading="lazy"
             class="photo-card"
@@ -147,5 +158,6 @@
         </ul>
       </nav>
     </footer>
+    <script type="text/javascript" src="/js/index.js"></script>
   </body>
 </html>
