--- a/pages/photos.html
+++ b/pages/photos.html
@@ -43,209 +43,209 @@
         <article>
           <div class="photo-card">
             <img
-              src="../img/photo-gallery/meg-and-ryan_ (1).jpg"
-              alt="Amanda Laikin - Maid of Honor"
-              title="Amanda Laikin - Maid of Honor"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734671/wedding-website/meg-and-ryan__1_cvdnwp.jpg"
+              alt="Meg and Ryan as Janet Snakehole and Burt Macklin"
+              title="Meg and Ryan"
               loading="lazy"
             />
           </div>
           <div class="photo-card">
             <img
-              src="../img/photo-gallery/meg-and-ryan_ (2).jpg"
-              alt="Amanda Laikin - Maid of Honor"
-              title="Amanda Laikin - Maid of Honor"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734671/wedding-website/meg-and-ryan__2_hlsnei.jpg"
+              alt="Meg and Ryan's first picture together"
+              title="Meg and Ryan"
               loading="lazy"
             />
           </div>
           <div class="photo-card">
             <img
-              src="../img/photo-gallery/meg-and-ryan_ (3).jpg"
-              alt="Amanda Laikin - Maid of Honor"
-              title="Amanda Laikin - Maid of Honor"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734671/wedding-website/meg-and-ryan__3_l7omzg.jpg"
+              alt="Meg and Ryan"
+              title="Meg and Ryan"
               loading="lazy"
             />
           </div>
           <div class="photo-card">
             <img
-              src="../img/photo-gallery/meg-and-ryan_ (4).jpg"
-              alt="Amanda Laikin - Maid of Honor"
-              title="Amanda Laikin - Maid of Honor"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734671/wedding-website/meg-and-ryan__4_jpgig5.jpg"
+              alt="Meg and Ryan enjoying some drinks at Jamesport Vineyards"
+              title="Meg and Ryan"
               loading="lazy"
             />
           </div>
           <div class="photo-card">
             <img
-              src="../img/photo-gallery/meg-and-ryan_ (5).jpg"
-              alt="Amanda Laikin - Maid of Honor"
-              title="Amanda Laikin - Maid of Honor"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734671/wedding-website/meg-and-ryan__5_wz3sli.jpg"
+              alt="Meg and Ryan"
+              title="Meg and Ryan"
               loading="lazy"
             />
           </div>
           <div class="photo-card">
             <img
-              src="../img/photo-gallery/meg-and-ryan_ (6).jpg"
-              alt="Amanda Laikin - Maid of Honor"
-              title="Amanda Laikin - Maid of Honor"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734671/wedding-website/meg-and-ryan__6_itjbdr.jpg"
+              alt="Meg and Ryan when Ryan proposed"
+              title="Meg and Ryan"
               loading="lazy"
             />
           </div>
           <div class="photo-card">
             <img
-              src="../img/photo-gallery/meg-and-ryan_ (7).jpg"
-              alt="Amanda Laikin - Maid of Honor"
-              title="Amanda Laikin - Maid of Honor"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734671/wedding-website/meg-and-ryan__7_xb3pwe.jpg"
+              alt="Meg and Ryan when Ryan proposed"
+              title="Meg and Ryan"
               loading="lazy"
             />
           </div>
           <div class="photo-card">
             <img
-              src="../img/photo-gallery/meg-and-ryan_ (8).jpg"
-              alt="Amanda Laikin - Maid of Honor"
-              title="Amanda Laikin - Maid of Honor"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734671/wedding-website/meg-and-ryan__8_gxqujl.jpg"
+              alt="Meg and Ryan when Ryan proposed"
+              title="Meg and Ryan"
               loading="lazy"
             />
           </div>
           <div class="photo-card">
             <img
-              src="../img/photo-gallery/meg-and-ryan_ (9).jpg"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734672/wedding-website/meg-and-ryan__9_rhhznc.jpg"
               alt="Amanda Laikin - Maid of Honor"
-              title="Amanda Laikin - Maid of Honor"
+              title="Meg and Ryan"
               loading="lazy"
             />
           </div>
           <div class="photo-card">
             <img
-              src="../img/photo-gallery/meg-and-ryan_ (10).jpg"
-              alt="Amanda Laikin - Maid of Honor"
-              title="Amanda Laikin - Maid of Honor"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734672/wedding-website/meg-and-ryan__10_cjtpt0.jpg"
+              alt="Meg and Ryan at Martha Clara Vineyard (now RGNY Vineyards)"
+              title="Meg and Ryan"
               loading="lazy"
             />
           </div>
           <div class="photo-card">
             <img
-              src="../img/photo-gallery/meg-and-ryan_ (11).jpg"
-              alt="Amanda Laikin - Maid of Honor"
-              title="Amanda Laikin - Maid of Honor"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734672/wedding-website/meg-and-ryan__11_fj7rlm.jpg"
+              alt="Meg showing off her engagement ring"
+              title="Meg and Ryan"
               loading="lazy"
             />
           </div>
           <div class="photo-card">
             <img
-              src="../img/photo-gallery/meg-and-ryan_ (12).jpg"
-              alt="Amanda Laikin - Maid of Honor"
-              title="Amanda Laikin - Maid of Honor"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734672/wedding-website/meg-and-ryan__12_zgxiwn.jpg"
+              alt="The happily engaged couple in flannel"
+              title="Meg and Ryan"
               loading="lazy"
             />
           </div>
           <div class="photo-card">
             <img
-              src="../img/photo-gallery/meg-and-ryan_ (13).jpg"
-              alt="Amanda Laikin - Maid of Honor"
-              title="Amanda Laikin - Maid of Honor"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734672/wedding-website/meg-and-ryan__13_d2gsel.jpg"
+              alt="Meg and Ryan in front of a christmas tree"
+              title="Meg and Ryan"
               loading="lazy"
             />
           </div>
           <div class="photo-card">
             <img
-              src="../img/photo-gallery/meg-and-ryan_ (14).jpg"
-              alt="Amanda Laikin - Maid of Honor"
-              title="Amanda Laikin - Maid of Honor"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734672/wedding-website/meg-and-ryan__14_evrl0j.jpg"
+              alt="Meg and Ryan in front of a christmas tree"
+              title="Meg and Ryan"
               loading="lazy"
             />
           </div>
           <div class="photo-card">
             <img
-              src="../img/photo-gallery/meg-and-ryan_ (15).jpg"
-              alt="Amanda Laikin - Maid of Honor"
-              title="Amanda Laikin - Maid of Honor"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734672/wedding-website/meg-and-ryan__15_ikzze5.jpg"
+              alt="Meg and Ryan"
+              title="Meg and Ryan"
               loading="lazy"
             />
           </div>
           <div class="photo-card">
             <img
-              src="../img/photo-gallery/meg-and-ryan_ (16).jpg"
-              alt="Amanda Laikin - Maid of Honor"
-              title="Amanda Laikin - Maid of Honor"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734672/wedding-website/meg-and-ryan__16_ae2ldn.jpg"
+              alt="Meg and Ryan"
+              title="Meg and Ryan"
               loading="lazy"
             />
           </div>
           <div class="photo-card">
             <img
-              src="../img/photo-gallery/meg-and-ryan_ (17).jpg"
-              alt="Amanda Laikin - Maid of Honor"
-              title="Amanda Laikin - Maid of Honor"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734672/wedding-website/meg-and-ryan__17_snl6xn.jpg"
+              alt="Meg and Ryan back at the table they had their first date, on their 1-year anniversary."
+              title="Meg and Ryan"
               loading="lazy"
             />
           </div>
           <div class="photo-card">
             <img
-              src="../img/photo-gallery/meg-and-ryan_ (18).jpg"
-              alt="Amanda Laikin - Maid of Honor"
-              title="Amanda Laikin - Maid of Honor"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734672/wedding-website/meg-and-ryan__18_vukqtr.jpg"
+              alt="Meg and Ryan"
+              title="Meg and Ryan"
               loading="lazy"
             />
           </div>
           <div class="photo-card">
             <img
-              src="../img/photo-gallery/meg-and-ryan_ (19).jpg"
-              alt="Amanda Laikin - Maid of Honor"
-              title="Amanda Laikin - Maid of Honor"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734672/wedding-website/meg-and-ryan__19_akxn29.jpg"
+              alt="Family photo of Meg and Ryan plus their dogs, Maggie and Charlie."
+              title="Meg and Ryan"
               loading="lazy"
             />
           </div>
           <div class="photo-card">
             <img
-              src="../img/photo-gallery/meg-and-ryan_ (20).jpg"
-              alt="Amanda Laikin - Maid of Honor"
-              title="Amanda Laikin - Maid of Honor"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734672/wedding-website/meg-and-ryan__20_uslahq.jpg"
+              alt="Meg and Ryan"
+              title="Meg and Ryan"
               loading="lazy"
             />
           </div>
           <div class="photo-card">
             <img
-              src="../img/photo-gallery/meg-and-ryan_ (21).jpg"
-              alt="Amanda Laikin - Maid of Honor"
-              title="Amanda Laikin - Maid of Honor"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734673/wedding-website/meg-and-ryan__21_q72yde.jpg"
+              alt="Meg and Ryan"
+              title="Meg and Ryan"
               loading="lazy"
             />
           </div>
           <div class="photo-card">
             <img
-              src="../img/photo-gallery/meg-and-ryan_ (22).jpg"
-              alt="Amanda Laikin - Maid of Honor"
-              title="Amanda Laikin - Maid of Honor"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734673/wedding-website/meg-and-ryan__22_j102ks.jpg"
+              alt="Meg and Ryan"
+              title="Meg and Ryan"
               loading="lazy"
             />
           </div>
           <div class="photo-card">
             <img
-              src="../img/photo-gallery/meg-and-ryan_ (23).jpg"
-              alt="Amanda Laikin - Maid of Honor"
-              title="Amanda Laikin - Maid of Honor"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734673/wedding-website/meg-and-ryan__23_runswc.jpg"
+              alt="Meg and Ryan"
+              title="Meg and Ryan"
               loading="lazy"
             />
           </div>
           <div class="photo-card">
             <img
-              src="../img/photo-gallery/meg-and-ryan_ (24).jpg"
-              alt="Amanda Laikin - Maid of Honor"
-              title="Amanda Laikin - Maid of Honor"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734673/wedding-website/meg-and-ryan__24_r2fqkw.jpg"
+              alt="Meg and Ryan"
+              title="Meg and Ryan"
               loading="lazy"
             />
           </div>
           <div class="photo-card">
             <img
-              src="../img/photo-gallery/meg-and-ryan_ (25).jpg"
-              alt="Amanda Laikin - Maid of Honor"
-              title="Amanda Laikin - Maid of Honor"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734673/wedding-website/meg-and-ryan__25_p7jbso.jpg"
+              alt="Meg and Ryan as Janet Snakehole and Burt Macklin"
+              title="Meg and Ryan"
               loading="lazy"
             />
           </div>
           <div class="photo-card">
             <img
-              src="../img/photo-gallery/meg-and-ryan_ (26).jpg"
-              alt="Amanda Laikin - Maid of Honor"
-              title="Amanda Laikin - Maid of Honor"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734673/wedding-website/meg-and-ryan__26_wen2ky.jpg"
+              alt="Meg and Ryan"
+              title="Meg and Ryan"
               loading="lazy"
             />
           </div>
