--- a/pages/venue.html
+++ b/pages/venue.html
@@ -43,7 +43,7 @@
         <article>
           <div class="photo-card">
             <img
-              src="../img/venue-hall.jpg"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734684/wedding-website/venue-hall_y4ygku.jpg"
               alt="Grand Ballroom at Stewart Manor Country Club"
               title="Grand Ballroom at Stewart Manor Country Club"
               loading="lazy"
