--- a/pages/wedding-party.html
+++ b/pages/wedding-party.html
@@ -44,7 +44,7 @@
           <h2>Bridesmaids</h2>
           <div class="photo-card">
             <img
-              src="../img/wp-amanda.jpg"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734684/wedding-website/wp-amanda_ld1tcu.jpg"
               alt="Amanda Laikin - Maid of Honor"
               title="Amanda Laikin - Maid of Honor"
               loading="lazy"
@@ -55,7 +55,7 @@
           </div>
           <div class="photo-card">
             <img
-              src="../img/wp-anna.jpg"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734685/wedding-website/wp-anna_ecvkmi.jpg"
               alt="Anna Young - Bridesmaid"
               title="Anna Young - Bridesmaid"
               loading="lazy"
@@ -66,7 +66,7 @@
           </div>
           <div class="photo-card">
             <img
-              src="../img/wp-emily.jpeg"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734685/wedding-website/wp-emily_anzj96.jpg"
               alt="Emily Baio - Bridesmaid"
               title="Emily Baio - Bridesmaid"
               loading="lazy"
@@ -77,7 +77,7 @@
           </div>
           <div class="photo-card">
             <img
-              src="../img/wp-emily2.jpg"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734685/wedding-website/wp-emily2_lcqacs.jpg"
               alt="Emily Furrer - Bridesmaid"
               title="Emily Furrer - Bridesmaid"
               loading="lazy"
@@ -87,7 +87,7 @@
           </div>
           <div class="photo-card">
             <img
-              src="../img/wp-erin.JPG"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734685/wedding-website/wp-erin_s0dqq0.jpg"
               alt="Erin Werner - Bridesmaid"
               title="Erin Werner - Bridesmaid"
               loading="lazy"
@@ -98,7 +98,7 @@
           </div>
           <div class="photo-card">
             <img
-              src="../img/wp-joanna.jpeg"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734685/wedding-website/wp-joanna_aql4tf.jpg"
               alt="Joanna Bonura - Bridesmaid"
               title="Joanna Bonura - Bridesmaid"
               loading="lazy"
@@ -109,7 +109,7 @@
           </div>
           <div class="photo-card">
             <img
-              src="../img/wp-sam.JPG"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734685/wedding-website/wp-sam_b0fk6y.jpg"
               alt="Samantha Motta - Bridesmaid"
               title="Samantha Motta - Bridesmaid"
               loading="lazy"
@@ -120,7 +120,7 @@
           </div>
           <div class="photo-card">
             <img
-              src="../img/wp-audrey.jpg"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734685/wedding-website/wp-audrey_xnwfpg.jpg"
               alt="Audrey Ryan - Junior Bridesmaid"
               title="Audrey Ryan - Junior Bridesmaid"
               loading="lazy"
@@ -131,7 +131,7 @@
           </div>
           <div class="photo-card">
             <img
-              src="../img/wp-jillian.jpg"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734685/wedding-website/wp-jillian_rnkwqm.jpg"
               alt="Jillian Ryan - Junior Bridesmaid"
               title="Jillian Ryan - Junior Bridesmaid"
               loading="lazy"
@@ -144,7 +144,7 @@
           <h2>Groomsmen</h2>
           <div class="photo-card">
             <img
-              src="../img/wp-walter.jpeg"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734686/wedding-website/wp-walter_fkihzp.jpg"
               alt="Walter Furrer - Best Man"
               title="Walter Furrer - Best Man"
               loading="lazy"
@@ -155,7 +155,7 @@
           </div>
           <div class="photo-card">
             <img
-              src="../img/wp-anthony.jpg"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734685/wedding-website/wp-anthony_zod1bv.jpg"
               alt="Anthony Calderaro - Groomsman"
               title="Anthony Calderaro - Groomsman"
               loading="lazy"
@@ -165,7 +165,7 @@
           </div>
           <div class="photo-card">
             <img
-              src="../img/wp-richard.JPG"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734685/wedding-website/wp-richard_iqnvfm.jpg"
               alt="Richard Motta - Groomsman"
               title="Anthony Calderaro - Groomsman"
               loading="lazy"
@@ -176,7 +176,7 @@
           </div>
           <div class="photo-card">
             <img
-              src="../img/wp-moe.jpg"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734685/wedding-website/wp-moe_juf5qn.jpg"
               alt="Moe Tompkins - Groomsman"
               title="Moe Tompkins - Groomsman"
               loading="lazy"
@@ -187,7 +187,7 @@
           </div>
           <div class="photo-card">
             <img
-              src="../img/wp-joe.jpeg"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734685/wedding-website/wp-joe_e8gwxr.jpg"
               alt="Joseph Ryan - Groomsman"
               title="Joseph Ryan - Groomsman"
               loading="lazy"
@@ -198,7 +198,7 @@
           </div>
           <div class="photo-card">
             <img
-              src="../img/wp-tom.jpg"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734686/wedding-website/wp-tom_tx8mbo.jpg"
               alt="Thomas Ryan - Groomsman"
               title="Thomas Ryan - Groomsman"
               loading="lazy"
@@ -209,7 +209,7 @@
           </div>
           <div class="photo-card">
             <img
-              src="../img/wp-didier.jpg"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734685/wedding-website/wp-didier_o8mfok.jpg"
               alt="Didier Valles - Groomsman"
               title="Didier Valles - Groomsman"
               loading="lazy"
@@ -223,7 +223,7 @@
           <h2>Officiant</h2>
           <div class="photo-card">
             <img
-              src="../img/wp-kerri.jpg"
+              src="https://res.cloudinary.com/ryan-furrer/image/upload/v1626734685/wedding-website/wp-kerri_ckduiz.jpg"
               alt="Kerri Mitchell - Officiant"
               title="Kerri Mitchell - Officiant"
               loading="lazy"
